# restartmgr.py

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: postprocess_rstmgr_docs.py  scrape_rstmgr_docs.py
src/restartmgr/: __init__.py  _const.py  _dll.py  _errors.py  _session.py  _structs.py  api.py  types.py
tests/restartmgr/: __init__.py  test_api.py  test_const.py  test_dll.py  test_errors.py  test_init.py  test_integration.py  test_session.py  test_structs.py  test_types.py
